# topic.worker.faculytics

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test_local.py
.github/workflows/: ci.yml  deploy.yml
docs/: architecture.mdx  contract.mdx  deployment.mdx  development.mdx  error-handling.mdx  metrics.mdx  multilingual.mdx  overview.mdx  pipeline.mdx
src/: config.py  evaluate.py  handler.py  models.py  topic_model.py
tests/: test_aspect_mapping.py  test_handler.py  test_handler_guided_path.py  test_multi_topic.py  test_topic_model.py  test_topic_model_guided.py
